# devops

./: README.md  gitversion.yaml
.github/workflows/: pr.yml  release.yml
deployments/helm/: README.md
deployments/helm/devops-app/: Chart.yaml  values.yaml
deployments/helm/devops-app/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
deployments/terraform/: locals.tf  providers.tf  s3.tf  tags.tf  vars.tf
src/: Dockerfile  README.md  app.py  pyproject.toml
src/tests/: test_app.py
